environments/gloo-edge/flagger-podinfo/flagger-demo/base/active/1-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: podinfo
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
         - prefix: /
        # manual test
        routeAction:
          single:
            upstream:
              name: test-podinfo-9898
              namespace: gloo-system
